<resources>
    <string name="app_name">SelfDistructText</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="log_in_button">Log In</string>
    <string name="password_field">Password</string>
    <string name="user_name_field">UserName</string>
    <string name="sing_up">Sing Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="User_Name_field">UserName</string>
    <string name="email_field">EmailField</string>
     <string name="Sign_Up_Button">Sign Up</string>
    <string name="menu_logout_label">Logout</string>
    <string name="Signup_Error_Message">Please make sure you enter a User name, Password, Email Address!</string>
    <string name="Signup_Error_Title">Oops</string>
    <string name="Login_Error_Message">Please make sure you enter a User name and Password!</string>
    <string name="Login_Error_Title">Oops</string>

</resources>
