<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_sign_up"
    tools:context="com.example.kanak.selfdistructtext.SignUpActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/UserNameField"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:hint="@string/user_name_field"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PasswordField"
        android:layout_below="@+id/UserNameField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:hint="@string/password_field"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/EmailField"
        android:layout_below="@+id/PasswordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:hint="@string/email_field"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_Up_Button"
        android:id="@+id/SignUp"
        android:layout_below="@+id/EmailField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"/>
</RelativeLayout>
